<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    layout_margin="8dp">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ingName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/ingredient_name" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingName"
            android:text="@string/date" />

        <TextView
            android:id="@+id/nutrition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:text="@string/nutrition" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>